исправления ошибок