@@ -1,26 +1,30 @@
 package ru.normacontrol.presentation.controller;
 
-import jakarta.persistence.EntityNotFoundException;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.security.SecurityRequirement;
 import io.swagger.v3.oas.annotations.tags.Tag;
+import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
 import ru.normacontrol.application.dto.response.CheckResultResponse;
+import ru.normacontrol.application.mapper.CheckResultMapper;
 import ru.normacontrol.application.usecase.CheckDocumentUseCase;
 import ru.normacontrol.domain.entity.CheckResult;
 import ru.normacontrol.domain.repository.CheckResultRepository;
-import ru.normacontrol.application.mapper.CheckResultMapper;
 
 import java.util.List;
+import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
-/**
- * REST-контроллер для результатов проверки.
- */
+@Slf4j
 @RestController
 @RequestMapping({"/check-results", "/api/v1/check-results"})
 @RequiredArgsConstructor
@@ -33,31 +37,53 @@ public class CheckResultController {
     private final CheckResultMapper checkResultMapper;
 
     @GetMapping("/document/{documentId}")
+    @Transactional(readOnly = true)
     @Operation(summary = "Получить последний результат проверки документа")
     @PreAuthorize("hasAnyRole('USER', 'REVIEWER', 'ADMIN')")
-    public ResponseEntity<CheckResultResponse> getLatestResult(@PathVariable UUID documentId) {
-        CheckResultResponse response = checkDocumentUseCase.getLatestResult(documentId);
-        return ResponseEntity.ok(response);
+    public ResponseEntity<?> getLatestResult(@PathVariable UUID documentId) {
+        try {
+            CheckResultResponse response = checkDocumentUseCase.getLatestResult(documentId);
+            return ResponseEntity.ok(response);
+        } catch (EntityNotFoundException e) {
+            log.error("Ошибка: {}", e.getMessage());
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Map.of("error", "Результат проверки не найден"));
+        } catch (Exception e) {
+            log.error("Ошибка: {}", e.getMessage(), e);
+            return ResponseEntity.badRequest().body(Map.of("error", "Не удалось получить результат проверки"));
+        }
     }
 
     @GetMapping("/document/{documentId}/history")
-    @Operation(summary = "Получить историю всех проверок документа")
+    @Transactional(readOnly = true)
+    @Operation(summary = "Получить историю проверок документа")
     @PreAuthorize("hasAnyRole('REVIEWER', 'ADMIN')")
-    public ResponseEntity<List<CheckResultResponse>> getHistory(@PathVariable UUID documentId) {
-        List<CheckResult> results = checkResultRepository.findByDocumentId(documentId);
-        List<CheckResultResponse> responses = results.stream()
-                .map(checkResultMapper::toResponse)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(responses);
+    public ResponseEntity<?> getHistory(@PathVariable UUID documentId) {
+        try {
+            List<CheckResultResponse> responses = checkResultRepository.findByDocumentId(documentId).stream()
+                    .map(checkResultMapper::toResponse)
+                    .toList();
+            return ResponseEntity.ok(responses);
+        } catch (Exception e) {
+            log.error("Ошибка: {}", e.getMessage(), e);
+            return ResponseEntity.ok(List.of());
+        }
     }
 
     @GetMapping("/{resultId}")
+    @Transactional(readOnly = true)
     @Operation(summary = "Получить результат проверки по ID")
     @PreAuthorize("hasAnyRole('USER', 'REVIEWER', 'ADMIN')")
-    public ResponseEntity<CheckResultResponse> getById(@PathVariable UUID resultId) {
-        CheckResult result = checkResultRepository.findById(resultId)
-                .orElseThrow(() -> new EntityNotFoundException(
-                        "Результат проверки не найден: " + resultId));
-        return ResponseEntity.ok(checkResultMapper.toResponse(result));
+    public ResponseEntity<?> getById(@PathVariable UUID resultId) {
+        try {
+            CheckResult result = checkResultRepository.findById(resultId)
+                    .orElseThrow(() -> new EntityNotFoundException("Результат проверки не найден: " + resultId));
+            return ResponseEntity.ok(checkResultMapper.toResponse(result));
+        } catch (EntityNotFoundException e) {
+            log.error("Ошибка: {}", e.getMessage());
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Map.of("error", "Результат проверки не найден"));
+        } catch (Exception e) {
+            log.error("Ошибка: {}", e.getMessage(), e);
+            return ResponseEntity.badRequest().body(Map.of("error", "Не удалось получить результат проверки"));
+        }
     }
 }
